<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:viewBindingIgnore="true">

    <ImageView
        android:id="@+id/thumbnail_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/todo"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="0dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnail_image_view" />

    <TextView
        android:id="@+id/updated_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:text="@string/updated"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="0dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updated_text_view" />

    <Button
        android:id="@+id/button_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/watch_on_youtube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<LinearLayout-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--tools:viewBindingIgnore="true"-->
<!--android:orientation="vertical">-->

<!--<ImageView-->
<!--    android:id="@+id/thumbnail_image_view"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginStart="8dp"-->
<!--    android:layout_marginLeft="8dp"-->
<!--    android:layout_marginTop="8dp"-->
<!--    android:layout_marginEnd="8dp"-->
<!--    android:layout_marginRight="8dp"-->
<!--    android:contentDescription="@string/todo"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    tools:srcCompat="@tools:sample/backgrounds/scenic"-->
<!--    android:padding="10dp"/>-->

<!--<TextView-->
<!--    android:id="@+id/title_text_view"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/title"-->
<!--    android:textSize="36sp"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/updated_text_view"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintHorizontal_bias="0.1"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/thumbnail_image_view"-->
<!--    android:padding="10dp"/>-->

<!--<TextView-->
<!--    android:id="@+id/updated_text_view"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/updated"-->
<!--    android:textSize="18sp"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/description_text_view"-->
<!--    tools:layout_editor_absoluteX="32dp"-->
<!--    android:padding="10dp"/>-->

<!--<TextView-->
<!--    android:id="@+id/description_text_view"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/description"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/url_text_view"-->
<!--    tools:layout_editor_absoluteX="16dp"-->
<!--    android:padding="10dp"/>-->

<!--<TextView-->
<!--    android:id="@+id/url_text_view"-->
<!--    android:text="@string/url"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    tools:layout_editor_absoluteX="48dp"-->
<!--    android:padding="10dp"/>-->
<!--</LinearLayout>-->